<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <TextView
        android:id="@+id/about_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/about"/>

    <TextView
        android:id="@+id/peculiarity1_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/grey_light"
        android:gravity="center_horizontal"
        android:padding="3dp"
        android:text="@string/line"
        android:textColor="@color/grey"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/about_hotel"
        app:layout_constraintTop_toBottomOf="@id/about_hotel" />

    <TextView
        android:id="@+id/peculiarity2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/grey_light"
        android:gravity="center_horizontal"
        android:padding="3dp"
        android:text="@string/paid_wifi"
        android:textColor="@color/grey"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/peculiarity1_text"
        app:layout_constraintStart_toEndOf="@id/peculiarity1_text"
        app:layout_constraintTop_toTopOf="@id/peculiarity1_text" />

    <TextView
        android:id="@+id/peculiarity3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/grey_light"
        android:gravity="center_horizontal"
        android:padding="3dp"
        android:text="@string/km_airport"
        android:textColor="@color/grey"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/peculiarity1_text"
        app:layout_constraintTop_toBottomOf="@id/peculiarity1_text" />

    <TextView
        android:id="@+id/peculiarity4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/grey_light"
        android:gravity="center_horizontal"
        android:padding="3dp"
        android:text="@string/km_beach"
        android:textColor="@color/grey"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@id/peculiarity3_text"
        app:layout_constraintTop_toTopOf="@id/peculiarity3_text" />

    <TextView
        android:id="@+id/hotel_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="16dp"
        android:gravity="top"
        android:padding="16dp"
        android:text="@string/hotel_description"
        android:textColor="@color/dark"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peculiarity3_text" />
</androidx.constraintlayout.widget.ConstraintLayout>